# lidar_imu_calib

./: CMakeLists.txt  package.xml
include/: calibExRLidar2Imu.h
src/: calib_exR_lidar2imu_node.cpp
src/lib/: calibExRLidar2Imu.cpp
